src/antlr/TypeScriptParser.java
// Generated from C:/Users/USER/IdeaProjects/angularproject/src/TypeScriptParser.g4 by ANTLR 4.13.2
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class TypeScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TYPES=1, KEYWORDS=2, IDENTIFIER=3, NUMBER=4, STRING=5, BOOLEAN=6, BINDING_START=7, 
		BINDING_END=8, DIRECTIVE=9, OF=10, NGFOR=11, NGIF=12, TAG_OPEN=13, TAG_CLOSE=14, 
		PLUS=15, SUB=16, UNDERSCORE=17, MULTI=18, DIVID=19, ASSIGN=20, LESS=21, 
		BIGGER=22, SEMICOLON=23, COMMA=24, COLON=25, DOT=26, OPENB=27, CLOSEB=28, 
		LBRACE=29, RBRACE=30, LSQUARE=31, RSQUARE=32, OR=33, AND=34, SHEE=35, 
		PERCIENT=36, HS=37, ARROW=38, Double_Comment=39, Single_Comment=40, WS=41;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_operator = 2, RULE_typeItem = 3, 
		RULE_type = 4, RULE_accessMoidifers = 5, RULE_directiveElement = 6, RULE_content = 7, 
		RULE_directive = 8, RULE_htmlContent = 9, RULE_templateBinding = 10, RULE_enumLiteral = 11, 
		RULE_enumAccess = 12, RULE_variableDeclaration = 13, RULE_tupleLiteral = 14, 
		RULE_listVar = 15, RULE_listBody = 16, RULE_listBodyBody = 17, RULE_arrayLiteral = 18, 
		RULE_arrayElement = 19, RULE_objectLiteral = 20, RULE_propertyAssignment = 21, 
		RULE_functionDeclaration = 22, RULE_arrowFunction = 23, RULE_awaitDef = 24, 
		RULE_parameterFunction = 25, RULE_parameter = 26, RULE_functionCall = 27, 
		RULE_block = 28, RULE_arrow = 29, RULE_argumentList = 30, RULE_ifStatement = 31, 
		RULE_classDeclaration = 32, RULE_classBody = 33, RULE_classCall = 34, 
		RULE_funclass = 35, RULE_propertyDeclaration = 36, RULE_constructorDeclaration = 37, 
		RULE_parameterList = 38, RULE_thisAssignment = 39, RULE_decorator = 40, 
		RULE_decoratorBody = 41, RULE_decoratorProperty = 42, RULE_interfaceDeclaration = 43, 
		RULE_interfaceBody = 44, RULE_forloop = 45, RULE_forBrack = 46, RULE_whileloop = 47, 
		RULE_importStatement = 48, RULE_importClause = 49, RULE_importSpecifier = 50, 
		RULE_exportStatement = 51, RULE_exportSpecifier = 52, RULE_cssDec = 53, 
		RULE_cssBody = 54, RULE_selector = 55, RULE_simpleSelector = 56, RULE_expressionItem = 57, 
		RULE_expression = 58;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "operator", "typeItem", "type", "accessMoidifers", 
			"directiveElement", "content", "directive", "htmlContent", "templateBinding", 
			"enumLiteral", "enumAccess", "variableDeclaration", "tupleLiteral", "listVar", 
			"listBody", "listBodyBody", "arrayLiteral", "arrayElement", "objectLiteral", 
			"propertyAssignment", "functionDeclaration", "arrowFunction", "awaitDef", 
			"parameterFunction", "parameter", "functionCall", "block", "arrow", "argumentList", 
			"ifStatement", "classDeclaration", "classBody", "classCall", "funclass", 
			"propertyDeclaration", "constructorDeclaration", "parameterList", "thisAssignment", 
			"decorator", "decoratorBody", "decoratorProperty", "interfaceDeclaration", 
			"interfaceBody", "forloop", "forBrack", "whileloop", "importStatement", 
			"importClause", "importSpecifier", "exportStatement", "exportSpecifier", 
			"cssDec", "cssBody", "selector", "simpleSelector", "expressionItem", 
			"expression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, "'{{'", "'}}'", null, "'of'", 
			"'ngFor'", "'ngIf'", null, null, "'+'", "'-'", "'_'", "'*'", "'/'", "'='", 
			"'<'", "'>'", "';'", "','", "':'", "'.'", "'('", "')'", "'{'", "'}'", 
			"'['", "']'", "'||'", "'&&'", "'|'", "'%'", "'#'", "'=>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TYPES", "KEYWORDS", "IDENTIFIER", "NUMBER", "STRING", "BOOLEAN", 
			"BINDING_START", "BINDING_END", "DIRECTIVE", "OF", "NGFOR", "NGIF", "TAG_OPEN", 
			"TAG_CLOSE", "PLUS", "SUB", "UNDERSCORE", "MULTI", "DIVID", "ASSIGN", 
			"LESS", "BIGGER", "SEMICOLON", "COMMA", "COLON", "DOT", "OPENB", "CLOSEB", 
			"LBRACE", "RBRACE", "LSQUARE", "RSQUARE", "OR", "AND", "SHEE", "PERCIENT", 
			"HS", "ARROW", "Double_Comment", "Single_Comment", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TypeScriptParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TypeScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScriptParserListener ) ((TypeScriptParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScriptParserListener ) ((TypeScriptParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeScriptParserVisitor ) return ((TypeScriptParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 414565015804L) != 0)) {
				{
				{
				setState(118);
				statement();
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public DecoratorContext decorator() {
			return getRuleContext(DecoratorContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public EnumLiteralContext enumLiteral() {
			return getRuleContext(EnumLiteralContext.class,0);
		}
		public TemplateBindingContext templateBinding() {
			return getRuleContext(TemplateBindingContext.class,0);
		}
		public DirectiveElementContext directiveElement() {
			return getRuleContext(DirectiveElementContext.class,0);
		}
		public ImportStatementContext importStatement() {
			return getRuleContext(ImportStatementContext.class,0);
		}
		public ExportStatementContext exportStatement() {
			return getRuleContext(ExportStatementContext.class,0);
		}
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public ListVarContext listVar() {
			return getRuleContext(ListVarContext.class,0);
		}
		public CssDecContext cssDec() {
			return getRuleContext(CssDecContext.class,0);
		}
		public AwaitDefContext awaitDef() {
			return getRuleContext(AwaitDefContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScriptParserListener ) ((TypeScriptParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScriptParserListener ) ((TypeScriptParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeScriptParserVisitor ) return ((TypeScriptParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(138);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				decorator();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(125);
				ifStatement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(126);
				expression();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(127);
				enumLiteral();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(128);
				templateBinding();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(129);
				directiveElement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(130);
				importStatement();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(131);
				exportStatement();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(132);
				functionDeclaration();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(133);
				classDeclaration();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(134);
				variableDeclaration();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(135);
				listVar();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(136);
				cssDec();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(137);
				awaitDef();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OperatorContext extends ParserRuleContext {
		public TerminalNode PLUS() { return getToken(TypeScriptParser.PLUS, 0); }
		public TerminalNode MULTI() { return getToken(TypeScriptParser.MULTI, 0); }
		public TerminalNode SUB() { return getToken(TypeScriptParser.SUB, 0); }
		public TerminalNode LESS() { return getToken(TypeScriptParser.LESS, 0); }
		public TerminalNode ASSIGN() { return getToken(TypeScriptParser.ASSIGN, 0); }
		public TerminalNode BIGGER() { return getToken(TypeScriptParser.BIGGER, 0); }
		public TerminalNode DOT() { return getToken(TypeScriptParser.DOT, 0); }
		public TerminalNode UNDERSCORE() { return getToken(TypeScriptParser.UNDERSCORE, 0); }
		public OperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScriptParserListener ) ((TypeScriptParserListener)listener).enterOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScriptParserListener ) ((TypeScriptParserListener)listener).exitOperator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeScriptParserVisitor ) return ((TypeScriptParserVisitor<? extends T>)visitor).visitOperator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperatorContext operator() throws RecognitionException {
		OperatorContext _localctx = new OperatorContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_operator);
		int _la;
		try {
			setState(154);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PLUS:
				enterOuterAlt(_localctx, 1);
				{
				setState(140);
				match(PLUS);
				}
				break;
			case MULTI:
				enterOuterAlt(_localctx, 2);
				{
				setState(141);
				match(MULTI);
				}
				break;
			case SUB:
				enterOuterAlt(_localctx, 3);
				{
				setState(142);
				match(SUB);
				}
				break;
			case LESS:
				enterOuterAlt(_localctx, 4);
				{
				setState(143);
				match(LESS);
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ASSIGN) {
					{
					setState(144);
					match(ASSIGN);
					}
				}

				}
				break;
			case BIGGER:
				enterOuterAlt(_localctx, 5);
				{
				setState(147);
				match(BIGGER);
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ASSIGN) {
					{
					setState(148);
					match(ASSIGN);
					}
				}

				}
				break;
			case ASSIGN:
				enterOuterAlt(_localctx, 6);
				{
				setState(151);
				match(ASSIGN);
				}
				break;
			case DOT:
				enterOuterAlt(_localctx, 7);
				{
				setState(152);
				match(DOT);
				}
				break;
			case UNDERSCORE:
				enterOuterAlt(_localctx, 8);
				{
				setState(153);
				match(UNDERSCORE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeItemContext extends ParserRuleContext {
		public TerminalNode TYPES() { return getToken(TypeScriptParser.TYPES, 0); }
		public TerminalNode IDENTIFIER() { return getToken(TypeScriptParser.IDENTIFIER, 0); }
		public TypeItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeItem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScriptParserListener ) ((TypeScriptParserListener)listener).enterTypeItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScriptParserListener ) ((TypeScriptParserListener)listener).exitTypeItem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeScriptParserVisitor ) return ((TypeScriptParserVisitor<? extends T>)visitor).visitTypeItem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeItemContext typeItem() throws RecognitionException {
		TypeItemContext _localctx = new TypeItemContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_typeItem);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			_la = _input.LA(1);
			if ( !(_la==TYPES || _la==IDENTIFIER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public List<TypeItemContext> typeItem() {
			return getRuleContexts(TypeItemContext.class);
		}
		public TypeItemContext typeItem(int i) {
			return getRuleContext(TypeItemContext.class,i);
		}
		public TerminalNode LSQUARE() { return getToken(TypeScriptParser.LSQUARE, 0); }
		public TerminalNode RSQUARE() { return getToken(TypeScriptParser.RSQUARE, 0); }
		public TerminalNode TYPES() { return getToken(TypeScriptParser.TYPES, 0); }
		public TerminalNode LESS() { return getToken(TypeScriptParser.LESS, 0); }
		public TerminalNode BIGGER() { return getToken(TypeScriptParser.BIGGER, 0); }
		public List<TerminalNode> COMMA() { return getTokens(TypeScriptParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(TypeScriptParser.COMMA, i);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScriptParserListener ) ((TypeScriptParserListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScriptParserListener ) ((TypeScriptParserListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeScriptParserVisitor ) return ((TypeScriptParserVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_type);
		int _la;
		try {
			setState(180);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(159);
				typeItem();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(160);
				typeItem();
				setState(161);
				match(LSQUARE);
				setState(162);
				match(RSQUARE);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(164);
				match(TYPES);
				setState(165);
				match(LESS);
				setState(166);
				typeItem();
				setState(167);
				match(BIGGER);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(169);
				match(LSQUARE);
				setState(170);
				typeItem();
				setState(175);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(171);
					match(COMMA);
					setState(172);
					typeItem();
					}
					}
					setState(177);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(178);
				match(RSQUARE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AccessMoidifersContext extends ParserRuleContext {
		public TerminalNode KEYWORDS() { return getToken(TypeScriptParser.KEYWORDS, 0); }
		public AccessMoidifersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_accessMoidifers; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScriptParserListener ) ((TypeScriptParserListener)listener).enterAccessMoidifers(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScriptParserListener ) ((TypeScriptParserListener)listener).exitAccessMoidifers(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeScriptParserVisitor ) return ((TypeScriptParserVisitor<? extends T>)visitor).visitAccessMoidifers(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AccessMoidifersContext accessMoidifers() throws RecognitionException {
		AccessMoidifersContext _localctx = new AccessMoidifersContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_accessMoidifers);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(182);
			match(KEYWORDS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
